fix spacing for application div

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -232,7 +232,7 @@ body {
 #application {
   width: 100%;
   height: 100%;
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 #call-to-action {
